[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1.6.0"

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/main.rs"

[[bin]]
name = "day_6"
path = "src/day_6/main.rs"
